--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,5 +1,5 @@
 body {
-  background: url(../images/to.jpg) top right repeat-y;
+  background: url(../images/newyear.jpg) top right repeat-y;
   text-align: center;
 }
 
